# openerb

./: .env.example  .gitattributes  .gitignore  COMPLETION_SUMMARY.md  INIT_COMPLETE.md  PHASE1_COMPLETE.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  REPORT_E2E_SOFT_TEST.md  REPORT_E2E_TEST.md  SESSION_SUMMARY.md  pyproject.toml  requirements.txt  setup.py  test_report_e2e.txt
core/: __init__.py  bootstrap.py  config.py  logger.py  types.py
docs/: API_REFERENCE.md  CHAT_INTERFACE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_RULES.md  PERFORMANCE_GUIDE.md  QUICK_START_DEPLOYMENT.md  ROBOT_DEPLOYMENT_DEBUG.md  SAFETY_SANDBOX_GUIDE.md  SYSTEM_ARCHITECTURE.md  SYSTEM_FAMILIARIZATION.md
openerb/: __init__.py  __main__.py
openerb/core/: __init__.py  concurrency_optimizer.py  config.py  logger.py  memory_optimizer.py  storage.py  types.py
openerb/interface/: __init__.py  chat_interface.py  embodied_brain_interface.py
openerb/llm/: __init__.py  base.py  client.py  config.py
openerb/llm/providers/: __init__.py  dashscope.py  openai_compat.py
openerb/modules/: __init__.py
openerb/modules/cerebellum/: __init__.py  cortex.py  skill_exporter.py  skill_library.py  skill_scorer.py  skill_trash_manager.py  skill_version_manager.py
openerb/modules/communication/: __init__.py  communication.py  distributed_learning.py  network_protocol.py  skill_sharing.py
openerb/modules/hippocampus/: __init__.py  competency_metrics.py  consolidation_engine.py  hippocampus.py  learning_history.py  learning_profile.py
openerb/modules/insular_cortex/: __init__.py  body_detector.py  capability_mapper.py  cortex.py  skill_classifier.py
openerb/modules/limbic_system/: __init__.py  confirmation_manager.py  danger_assessment.py  safety_evaluator.py
openerb/modules/motor_cortex/: __init__.py  code_executor.py  code_generator.py  code_template_library.py  code_validator.py  motor_cortex.py  unitree_sdk_adapter.py
openerb/modules/prefrontal_cortex/: __init__.py  context_manager.py  cortex.py  intent_parser.py  task_decomposer.py
openerb/modules/system_integration/: __init__.py  integration_engine.py
openerb/prompts/: __init__.py  chat_system.md  code_generator.md  intent_recognition.md  result_interpreter.md
openerb/skills/: skill_library.json
scripts/: chat.py  debug_chat.py  git_commit.sh  robot_deployment_test.py  test_brain_e2e.py  test_chat.py
tests/: conftest.py  test_bootstrap.py  test_cerebellum.py  test_communication.py  test_config.py  test_core.py  test_embodied_brain_interface.py  test_hippocampus.py  test_insular_cortex.py  test_integration.py  test_limbic_system.py  test_llm_api_example.py  test_llm_providers.py  test_motor_cortex.py  test_prefrontal_cortex.py  test_visual_cortex.py
(+7 files in other folders)
