[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openerb"
version = "0.1.0"
description = "Open Embodied Robot Brain - Self-Evolving Robot Control System"
readme = "README.md"
authors = [
    {name = "OpenERB Project", email = "info@openerb.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv>=0.19.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "RestrictedPython>=6.0.0",
    "loguru>=0.7.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
openerb = "openerb.core.bootstrap:cli"

[project.urls]
Homepage = "https://github.com/openerb/openerb"
Repository = "https://github.com/openerb/openerb.git"
Documentation = "https://github.com/openerb/openerb/tree/main/docs"

[tool.setuptools]
packages = ["openerb"]

[tool.setuptools.package-data]
openerb = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=openerb --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["openerb"]
omit = ["*/__main__.py", "*/bootstrap.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
